[package]
name = "grafana-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
hyper = { version = "0.14.18", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.35"

[dev-dependencies]
mockito = "0.31.0"
tracing-subscriber = "0.3.11"
